--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>title</title>
   </head>
   <body>
-
+    <h1>Le super site trop bien</h1>
      <!-- page content -->
   </body>
 </html>
